# rust-cassowary

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
src/math/: expressions.rs  mod.rs  relationships.rs  variables.rs
src/objective/: constraints.rs  functions.rs  mod.rs  problems.rs  solvers.rs
src/tableau/: enter_vars.rs  initials.rs  leave_vars.rs  mod.rs  pivots.rs  tables.rs
tests/: simplex_test_max.rs  simplex_test_min.rs
